# memswap

./: CMakeLists.txt  README.md  crc_32.c  memswap.c  test.c
cmake/: cflags.cmake
include/: memswap.h
